# scout

./: .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INTEGRATION.md
scout/: __init__.py  cli.py  config.py  core.py  errors.py  ratelimit.py  robots.py  schema.py  urlnorm.py
scout/adapters/: __init__.py  _engine.py  _html.py  arxiv.py  base.py  brave.py  duckduckgo.py  fixture.py  gdelt.py  guardian.py  marginalia.py  mojeek.py  pubmed.py  rss.py  searxng_public.py  startpage.py  wayback.py  wikipedia.py
scripts/: acceptance.sh
tests/: conftest.py  stubs.py  test_cli.py  test_config.py  test_core.py  test_engine_adapters.py  test_knowledge_adapters.py  test_live_smoke.py  test_news_adapters.py  test_politeness.py  test_ratelimit.py  test_schema.py  test_searxng_public.py  test_urlnorm.py
tests/fixtures/: arxiv.xml  brave.html  duckduckgo.html  gdelt.json  guardian.json  marginalia.json  mojeek.html  pubmed_esearch.json  pubmed_esummary.json  rss_factcheck.xml  rss_worldnews.xml  searxng.json  startpage.html  wayback.json  wikipedia.json
